ns/katchblog/katchblog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: katchblog
  namespace: katchblog
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
