ns/katchblog/katchblog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: katchblog
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://katchblog.com"
    nginx.ingress.kubernetes.io/rewrite-target: /*
spec:
  tls:
  - hosts:
    - katchblog.com
    - www.katchblog.com
    secretName: katchblog-cert
  rules:
  - host: katchblog.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          serviceName: katchblog
          servicePort: 80
  - host: www.katchblog.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: katchblog
            port: 
              name: http
